inheritance/inheritance180_output.txt
inheritance180.cpp: In function ‘void f1(A*)’:
inheritance180.cpp:40:36: error: request for member ‘Area’ in ‘a’, which is of pointer type ‘A*’ (maybe you meant to use ‘->’ ?)
   40 |   cout <<  __LINE__ << "\t: " << a.Area() << endl;
      |                                    ^~~~
inheritance180.cpp:41:5: error: request for member ‘show’ in ‘a’, which is of pointer type ‘A*’ (maybe you meant to use ‘->’ ?)
   41 |   a.show();
      |     ^~~~
inheritance$ 
